deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ipl-deployment
  namespace: rithika-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ipl
  template:
    metadata:
      labels:
        app: ipl
    spec:
      containers:
      - name: ipl-container
        image: nginx:latest
        ports:
        - containerPort: 80
  

---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: hospital-deployment
  namespace: rithika-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hospital
  template:
    metadata:
      labels:
        app: hospital
    spec:
      containers:
        - name: hospital-container
          image: rithika17/hospital-app:v1.0.0
          ports:
            - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: school-deployment
  namespace: rithika-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: school
  template:
    metadata:
      labels:
        app: school
    spec:
      containers:
        - name: school-container
          image: rithika17/school-app:v1.0.0
          ports:
            - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-monitoring-deployment
  namespace: rithika-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-monitoring
  template:
    metadata:
      labels:
        app: devops-monitoring
    spec:
      containers:
        - name: devops-monitoring-container
          image: rithika17/devops-monitoring-app:v1.0.0
          ports:
            - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e-commerce-deployment
  namespace: rithika-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  e-commerce
  template:
    metadata:
      labels:
        app: e-commerce
    spec:
      containers:
        - name: e-commerce-container
          image: rrithika17/e-commerce-app:v1.0.0
          ports:
            - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-deployment
  namespace: rithika-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fitness
  template:
    metadata:
      labels:
        app: fitness
    spec:
      containers:
        - name: fitness-container
          image: rithika17/fitness-app:v1.0.0
          ports:
            - containerPort: 80
