multi-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-pod
  namespace: rithika-ns
spec:
  containers:
    - name: web1
      image: nginx:latest
      ports:
        - containerPort: 80

    - name: web2
      image: httpd:latest
      ports:
        - containerPort: 80
