rithika-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: candy-pod
  namespace: candy-ns
spec:
  containers:
    - name: candy
      image: nginx
      ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Pod
metadata:
  name: zomato-pod
  namespace: zomato-ns
spec:
  containers:
    - name: zomato
      image: httpd      
      ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Pod
metadata:
  name: swiggy-pod
  namespace: swiggy-ns
spec:
  containers:
    - name: swiggy
      image: nginx      
      ports:
        - containerPort: 8001

---
apiVersion: v1
kind: Pod
metadata:
  name: blossom-pod
  namespace: blossom-ns
spec:
  containers:
    - name: blossom
      image: redis     
      ports:
        - containerPort: 6379

---
apiVersion: v1
kind: Pod
metadata:
  name: duolingo-pod
  namespace: duolingo-ns
spec:
  containers:
    - name: duolingo
      image: ubuntu   
      ports:
        - containerPort: 6000

---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  namespace: candy-ns
spec:
  containers:
    - name: mysql
      image: mysql
      ports:
        - containerPort: 3306

---
apiVersion: v1
kind: Pod
metadata:
  name: mongo-pod
  namespace: zomato-ns
spec:
  containers:
    - name: mongo
      image: mongo
      ports:
        - containerPort: 27017

---
apiVersion: v1
kind: Pod
metadata:
  name: python-pod
  namespace: swiggy-ns
spec:
  containers:
    - name: python
      image: python:3.11-slim
      ports:
        - containerPort: 5000

---
apiVersion: v1
kind: Pod
metadata:
  name: node-pod
  namespace: blossom-ns
spec:
  containers:
    - name: node
      image: node:20-alpine
      ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Pod
metadata:
  name: postgres-pod
  namespace: duolingo-ns
spec:
  containers:
    - name: postgres
      image: postgres
      ports:
        - containerPort: 5432
