retail-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: retail-app-service
  namespace: rithikaa-ns
spec:
  type: LoadBalancer  # Use NodePort if LoadBalancer is not supported
  ports:
    - port: 3130
      targetPort: 3130
      protocol: TCP
  selector:
    app: retail
