svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipl-service
  namespace: rithika-ns
spec:
  selector:
      app: ipl
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 80   
  type: ClusterIP    



#apiVersion: v1
# kind: Service
# metadata:
#   name: ipl-service
#   namespace: murali-ns
# spec:
#   selector:
#     app: ipl
#   ports:
#     - protocol: TCP
#       port: 80         # host port or service port, it can be any port number, it is not necessary to be same as container port
#       targetPort: 3000 # container port, it should be same as container port defined in deployment.yaml
#   type: ClusterIP    # default service type, it is used to expose the service internally within the cluster

# apiVersion: v1
# kind: Service
# metadata:
#   name: wipro-service
#   namespace: rithika-ns
# spec:
#   selector:
#       app: wipro
#   ports:
#     - protocol: TCP
#       port: 80     
#       nodePort: 30080   
#       targetPort: 80   
#   type: NodePort 

# node port, it is used to expose the service externally outside the cluster, it should be in the range of 30000-32767


# apiVersion: v1
# kind: Service
# metadata:
#   name: wipro-service
#   namespace: rithika-ns
# spec:
#   selector:
#       app: wipro
#   ports:
#     - protocol: TCP
#       port: 80        
#       targetPort: 3000
#   type: LoadBalancer

#   # svc type externalname
# apiVersion: v1  
# kind: Service
# metadata:
#   name: external-service
#   namespace: murali-ns
# spec:
#   type: ExternalName
#   externalName: google.com   # it is used to map the service to an external DNS name, 
#   # it is used to access the external service from within the cluster, it does not create any proxy or load balancer, 
#   # it just maps the service to the external DNS name

apiVersion: v1
kind: Service
metadata:
  name: ipl-service
  namespace: rithika-ns
spec:
  selector:
      app: ipl
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 80   
  type: ClusterIP 
---
apiVersion: v1
kind: Service
metadata:
  name: hospital-service
  namespace: rithika-ns
spec:
  selector:
      app: hospital
  ports:
    - protocol: TCP
      port: 80       
      targetPort: 80   
  type: ClusterIP  

---
apiVersion: v1
kind: Service
metadata:
  name: school-service
  namespace: rithika-ns
spec:
  selector:
      app: school
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 80   
  type: ClusterIP  

---
apiVersion: v1
kind: Service
metadata:
  name: devops-monitoring-service
  namespace: rithika-ns
spec:
  selector:
      app: devops-monitoring
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 80   
  type: ClusterIP  

---
apiVersion: v1
kind: Service
metadata:
  name: e-commerce-service
  namespace: rithika-ns
spec:
  selector:
      app: e-commerce
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 80   
  type: ClusterIP  

---
apiVersion: v1
kind: Service
metadata:
  name: fitness-service
  namespace: rithika-ns
spec:
  selector:
      app: fitness
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 80   
  type: ClusterIP
